--- a/less/com.less
+++ b/less/com.less
@@ -5,6 +5,7 @@
 .check_def{background-position:0 0 }
 .check_sel{background-position: 0 -77px;}
 }
+
 /*dropdownlist  start ---------------------*/
 .lui_dropdownlist{
     padding: 8px 40px 8px 10px;
@@ -73,12 +74,11 @@
     padding-bottom: 0;
     z-index: 99;
     // display: none;
+} 
 }
-  
-}
-
 /*dropdownlist  end ---------------------*/
 
+/**单词发音*/
 .lui_wordspeak{
     display: inline-block;
     width: 20px;
